--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nextjs-expense-tracker-website",
+  "name": "next-expense-tracker-website",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,22 +9,25 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@clerk/nextjs": "^6.28.1",
-    "@prisma/client": "^6.13.0",
-    "next": "15.4.5",
-    "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "@clerk/nextjs": "^6.24.0",
+    "@clerk/themes": "^2.2.55",
+    "@prisma/client": "^6.11.1",
+    "next": "15.3.5",
+    "openai": "^5.9.0",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "autoprefixer": "^10.4.21",
     "eslint": "^9",
-    "eslint-config-next": "15.4.5",
-    "prisma": "^6.13.0",
-    "tailwindcss": "^4",
+    "eslint-config-next": "15.3.5",
+    "postcss": "^8.5.6",
+    "prisma": "^6.11.1",
+    "tailwindcss": "^3.4.17",
     "typescript": "^5"
   }
 }
