--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "@clerk/nextjs": "^6.24.0",
     "@clerk/themes": "^2.2.55",
+    "@google/generative-ai": "^0.24.1",
     "@prisma/client": "^6.11.1",
+    "dotenv": "^17.2.1",
     "next": "15.3.5",
     "openai": "^5.9.0",
     "react": "^19.0.0",
